[FIXED #104240680] Objectlink's clickable redirect does not prevent click propagation on Safari
- removed a focus trigger handler form enterEditMode to evade looping of the event
- added a div wrapper around the link arrow icon so that the inline edit can recognize the source
  element of the focus event; i.e. if the link arrow is focused it will not call enterEditMode method.

--- a/src/client/scss/x/_font.scss
+++ b/src/client/scss/x/_font.scss
@@ -96,3 +96,6 @@ $icon-circle-o: $fa-var-circle-o !default;
 .icon-question-circle:before { content: $icon-question-circle }
 .icon-circle:before { content: $icon-circle }
 .icon-circle-o:before { content: $icon-circle-o }
+
+// Color class
+.blackiconcolor {color:black;}
