--- a/src/client/scss/x/_objectlink2.scss
+++ b/src/client/scss/x/_objectlink2.scss
@@ -1,7 +1,7 @@
 .x-objectlink2-view{
 	@include inline-view();
 
-	> div{
+	div{
 		display: inline-block;
 	}
 
